webkitAudioContext deprecated - fixed

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     var volume = 1.0;
     var volume2 = 1.0;
 
-    context = new webkitAudioContext();
+    context = new AudioContext();
     var wave = 0;
     var wave2 = 0;
     var osc2on = true;
